`tmux`: pane navigation using C-o & M-o
also removed old keybindings for pane navigation & new window creation, with messages to use my updated keybindings

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,9 +5,9 @@
 #
 # General Usage Notes:
 #
-# `C-a o` will rotate to the next pane; `C-a ;` will rotate to *last* pane,
-# not necessarily previous pane.
-#   - Might consider implementing a solution in the future, but fine for now
+# `C-o` & `M-o` will navigate between panes in clockwise & counterclockwise
+# directions, respectively. Should be used instead of builtin `C-a o`
+# one-directional navigation, which is now disabled.
 #
 # `C-a ?` will list out all default key bindings, but importantly will *not*
 # include bindings made in this file. To see all bindings, run
@@ -51,9 +51,9 @@ set -g prefix C-a
 # 'C-a' + 'C-a' to use 'C-a' (e.g. necessary to use shortcut inside emacs)
 bind-key C-a send-prefix
 
-# create a new window with C-a C-c or C-t; default to home directory, & with
-# empty name
-bind c new-window -c "~" -n "" \; display-message "Consider using C-t to create a new window"
+# Create a new window with `C-t`, defaulting to ~ directory & with empty name.
+# Remove old `C-a c` binding with message to use new binding.
+bind c display-message "Removed this binding. Use C-t to create a new window"
 bind -n C-t new-window -c "~" -n ""
 
 # close a window with C-w
@@ -125,6 +125,13 @@ set -g window-active-style 'fg=default,bg=black' # active pane
 set -g window-style 'fg=default,bg=#121212' # inactive pane
 set -g pane-active-border-style 'fg=#af8700,bg=black' # active border
 set -g pane-border-style 'fg=#af8700,bg=#121212' # inactive border
+
+# Pane navigation.
+# Bind `C-o` to move clockwise, & `M-o` to move counterclockwise.
+# Remove old `C-a o` binding with messagee to use new bindings.
+bind -n C-o select-pane -t:.+
+bind -n M-o select-pane -t:.-
+bind o display-message "Removed this binding. Use C-o or M-o for pane navigation."
 
 ################################################################################
 # Plugins ######################################################################
