--- a/alfred/Alfred.alfredpreferences/preferences/features/defaultresults/prefs.plist
+++ b/alfred/Alfred.alfredpreferences/preferences/features/defaultresults/prefs.plist
@@ -3,9 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>fallbacks</key>
-	<array>
-		<string>features.websearch.duckduckgo.fallback</string>
-	</array>
+	<array/>
 	<key>showContacts</key>
 	<false/>
 </dict>
