`tmux`: add passthrough shortcuts for `C-o` & `C-t`
to, for example, be able to use within Claude Code

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -48,8 +48,15 @@ setw -g pane-base-index 1
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set -g prefix C-a
+
 # 'C-a' + 'C-a' to use 'C-a' (e.g. necessary to use shortcut inside emacs)
 bind-key C-a send-prefix
+
+# 'C-a' + {'C-o', 'C-t'} to send {'C-o', 'C-t'} to the program inside tmux,
+# since these keyboard shortcuts are otherwise used by tmux & can't be used for,
+# e.g., Claude Code.
+bind-key C-o send-keys 'C-o'
+bind-key C-t send-keys 'C-t'
 
 # Create a new window with `C-t`, defaulting to ~ directory & with empty name.
 # Remove old `C-a c` binding with message to use new binding.
