--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,7 @@
 # - `pre-commit run --all-files --verbose` to run the hooks manually.
 # - `git commit -n/--no-verify` to skip the hooks.
 # - `pre-commit autoupdate` to update the hooks to the latest version.
+# - `pre-commit clean` to clean out cached files.
 # - In hooks configurations below with `files` & `exclude` options set: to
 #   enumerate all files that will be processed by the hook, run:
 #   `git ls-files | grep -E '{files}' | grep -v -E '{exclude}'`
