--- a/rectangle.config.json
+++ b/rectangle.config.json
@@ -1,314 +1,298 @@
 {
-  "bundleId" : "com.knollsoft.Rectangle",
-  "defaults" : {
-    "SUEnableAutomaticChecks" : {
-      "bool" : true
+  "bundleId": "com.knollsoft.Rectangle",
+  "defaults": {
+    "SUEnableAutomaticChecks": {
+      "bool": true
     },
-    "allowAnyShortcut" : {
-      "bool" : false
+    "allowAnyShortcut": {
+      "bool": false
     },
-    "almostMaximizeHeight" : {
-      "float" : 0
+    "almostMaximizeHeight": {
+      "float": 0
     },
-    "almostMaximizeWidth" : {
-      "float" : 0
+    "almostMaximizeWidth": {
+      "float": 0
     },
-    "altThirdCycle" : {
-      "int" : 0
+    "altThirdCycle": {
+      "int": 0
     },
-    "alternateDefaultShortcuts" : {
-      "bool" : false
+    "alternateDefaultShortcuts": {
+      "bool": false
     },
-    "alwaysAccountForStage" : {
-      "int" : 0
+    "alwaysAccountForStage": {
+      "int": 0
     },
-    "applyGapsToMaximize" : {
-      "int" : 0
+    "applyGapsToMaximize": {
+      "int": 0
     },
-    "applyGapsToMaximizeHeight" : {
-      "int" : 0
+    "applyGapsToMaximizeHeight": {
+      "int": 0
     },
-    "attemptMatchOnNextPrevDisplay" : {
-      "int" : 0
+    "attemptMatchOnNextPrevDisplay": {
+      "int": 0
     },
-    "autoMaximize" : {
-      "int" : 0
+    "autoMaximize": {
+      "int": 0
     },
-    "cascadeAllDeltaSize" : {
-      "float" : 30
+    "cascadeAllDeltaSize": {
+      "float": 30
     },
-    "centerHalfCycles" : {
-      "int" : 0
+    "centerHalfCycles": {
+      "int": 0
     },
-    "centeredDirectionalMove" : {
-      "int" : 0
+    "centeredDirectionalMove": {
+      "int": 0
     },
-    "cornerSnapAreaSize" : {
-      "float" : 20
+    "cornerSnapAreaSize": {
+      "float": 20
     },
-    "curtainChangeSize" : {
-      "int" : 0
+    "curtainChangeSize": {
+      "int": 0
     },
-    "cycleSizesIsChanged" : {
-      "bool" : false
+    "cycleSizesIsChanged": {
+      "bool": false
     },
-    "disabledApps" : {
-
+    "disabledApps": {},
+    "doubleClickTitleBar": {
+      "int": 0
     },
-    "doubleClickTitleBar" : {
-      "int" : 0
+    "doubleClickTitleBarIgnoredApps": {},
+    "doubleClickTitleBarRestore": {
+      "int": 0
     },
-    "doubleClickTitleBarIgnoredApps" : {
-
+    "dragFromStage": {
+      "int": 0
     },
-    "doubleClickTitleBarRestore" : {
-      "int" : 0
+    "enhancedUI": {
+      "int": 1
     },
-    "dragFromStage" : {
-      "int" : 0
+    "footprintAlpha": {
+      "float": 0.3
     },
-    "enhancedUI" : {
-      "int" : 1
+    "footprintAnimationDurationMultiplier": {
+      "float": 0
     },
-    "footprintAlpha" : {
-      "float" : 0.3
+    "footprintBorderWidth": {
+      "float": 2
     },
-    "footprintAnimationDurationMultiplier" : {
-      "float" : 0
+    "footprintColor": {},
+    "footprintFade": {
+      "int": 0
     },
-    "footprintBorderWidth" : {
-      "float" : 2
+    "fullIgnoreBundleIds": {},
+    "gapSize": {
+      "float": 0
     },
-    "footprintColor" : {
-
+    "hapticFeedbackOnSnap": {
+      "int": 0
     },
-    "footprintFade" : {
-      "int" : 0
+    "hideMenubarIcon": {
+      "bool": true
     },
-    "fullIgnoreBundleIds" : {
-
+    "ignoreDragSnapToo": {
+      "int": 0
     },
-    "gapSize" : {
-      "float" : 0
+    "ignoredSnapAreas": {
+      "int": 0
     },
-    "hapticFeedbackOnSnap" : {
-      "int" : 0
+    "landscapeSnapAreas": {},
+    "launchOnLogin": {
+      "bool": true
     },
-    "hideMenubarIcon" : {
-      "bool" : true
+    "minimumWindowHeight": {
+      "float": 0
     },
-    "ignoreDragSnapToo" : {
-      "int" : 0
+    "minimumWindowWidth": {
+      "float": 0
     },
-    "ignoredSnapAreas" : {
-      "int" : 0
+    "missionControlDragging": {
+      "int": 0
     },
-    "landscapeSnapAreas" : {
-
+    "missionControlDraggingAllowedOffscreenDistance": {
+      "float": 25
     },
-    "launchOnLogin" : {
-      "bool" : true
+    "missionControlDraggingDisallowedDuration": {
+      "int": 250
     },
-    "minimumWindowHeight" : {
-      "float" : 0
+    "moveCursor": {
+      "int": 0
     },
-    "minimumWindowWidth" : {
-      "float" : 0
+    "moveCursorAcrossDisplays": {
+      "int": 0
     },
-    "missionControlDragging" : {
-      "int" : 0
+    "notifiedOfProblemApps": {
+      "bool": false
     },
-    "missionControlDraggingAllowedOffscreenDistance" : {
-      "float" : 25
+    "obtainWindowOnClick": {
+      "int": 0
     },
-    "missionControlDraggingDisallowedDuration" : {
-      "int" : 250
+    "portraitSnapAreas": {},
+    "relaunchOpensMenu": {
+      "bool": false
     },
-    "moveCursor" : {
-      "int" : 0
+    "resizeOnDirectionalMove": {
+      "bool": false
     },
-    "moveCursorAcrossDisplays" : {
-      "int" : 0
+    "screenEdgeGapBottom": {
+      "float": 0
     },
-    "notifiedOfProblemApps" : {
-      "bool" : false
+    "screenEdgeGapLeft": {
+      "float": 0
     },
-    "obtainWindowOnClick" : {
-      "int" : 0
+    "screenEdgeGapRight": {
+      "float": 0
     },
-    "portraitSnapAreas" : {
-
+    "screenEdgeGapTop": {
+      "float": 0
     },
-    "relaunchOpensMenu" : {
-      "bool" : false
+    "screenEdgeGapTopNotch": {
+      "float": 0
     },
-    "resizeOnDirectionalMove" : {
-      "bool" : false
+    "screenEdgeGapsOnMainScreenOnly": {
+      "bool": false
     },
-    "screenEdgeGapBottom" : {
-      "float" : 0
+    "selectedCycleSizes": {
+      "int": 0
     },
-    "screenEdgeGapLeft" : {
-      "float" : 0
+    "shortEdgeSnapAreaSize": {
+      "float": 145
     },
-    "screenEdgeGapRight" : {
-      "float" : 0
+    "showAllActionsInMenu": {
+      "int": 0
     },
-    "screenEdgeGapTop" : {
-      "float" : 0
+    "sixthsSnapArea": {
+      "int": 0
     },
-    "screenEdgeGapTopNotch" : {
-      "float" : 0
+    "sizeOffset": {
+      "float": 0
     },
-    "screenEdgeGapsOnMainScreenOnly" : {
-      "bool" : false
+    "snapEdgeMarginBottom": {
+      "float": 5
     },
-    "selectedCycleSizes" : {
-      "int" : 0
+    "snapEdgeMarginLeft": {
+      "float": 5
     },
-    "shortEdgeSnapAreaSize" : {
-      "float" : 145
+    "snapEdgeMarginRight": {
+      "float": 5
     },
-    "showAllActionsInMenu" : {
-      "int" : 0
+    "snapEdgeMarginTop": {
+      "float": 5
     },
-    "sixthsSnapArea" : {
-      "int" : 0
+    "snapModifiers": {
+      "int": 0
     },
-    "sizeOffset" : {
-      "float" : 0
+    "specifiedHeight": {
+      "float": 1050
     },
-    "snapEdgeMarginBottom" : {
-      "float" : 5
+    "specifiedWidth": {
+      "float": 1680
     },
-    "snapEdgeMarginLeft" : {
-      "float" : 5
+    "stageSize": {
+      "float": 190
     },
-    "snapEdgeMarginRight" : {
-      "float" : 5
+    "subsequentExecutionMode": {
+      "int": 0
     },
-    "snapEdgeMarginTop" : {
-      "float" : 5
+    "systemWideMouseDown": {
+      "int": 0
     },
-    "snapModifiers" : {
-      "int" : 0
+    "systemWideMouseDownApps": {},
+    "todo": {
+      "int": 0
     },
-    "specifiedHeight" : {
-      "float" : 1050
+    "todoApplication": {},
+    "todoMode": {
+      "bool": false
     },
-    "specifiedWidth" : {
-      "float" : 1680
+    "todoSidebarSide": {
+      "int": 1
     },
-    "stageSize" : {
-      "float" : 190
+    "todoSidebarWidth": {
+      "float": 400
     },
-    "subsequentExecutionMode" : {
-      "int" : 0
+    "traverseSingleScreen": {
+      "int": 0
     },
-    "systemWideMouseDown" : {
-      "int" : 0
+    "unsnapRestore": {
+      "int": 0
     },
-    "systemWideMouseDownApps" : {
-
-    },
-    "todo" : {
-      "int" : 0
-    },
-    "todoApplication" : {
-
-    },
-    "todoMode" : {
-      "bool" : false
-    },
-    "todoSidebarSide" : {
-      "int" : 1
-    },
-    "todoSidebarWidth" : {
-      "float" : 400
-    },
-    "traverseSingleScreen" : {
-      "int" : 0
-    },
-    "unsnapRestore" : {
-      "int" : 0
-    },
-    "windowSnapping" : {
-      "int" : 2
+    "windowSnapping": {
+      "int": 2
     }
   },
-  "shortcuts" : {
-    "bottomHalf" : {
-      "keyCode" : 125,
-      "modifierFlags" : 1572864
+  "shortcuts": {
+    "bottomHalf": {
+      "keyCode": 125,
+      "modifierFlags": 1572864
     },
-    "bottomLeft" : {
-      "keyCode" : 123,
-      "modifierFlags" : 1441792
+    "bottomLeft": {
+      "keyCode": 123,
+      "modifierFlags": 1441792
     },
-    "bottomRight" : {
-      "keyCode" : 124,
-      "modifierFlags" : 1441792
+    "bottomRight": {
+      "keyCode": 124,
+      "modifierFlags": 1441792
     },
-    "center" : {
-      "keyCode" : 8,
-      "modifierFlags" : 1572864
+    "center": {
+      "keyCode": 8,
+      "modifierFlags": 1572864
     },
-    "larger" : {
-      "keyCode" : 124,
-      "modifierFlags" : 917504
+    "larger": {
+      "keyCode": 124,
+      "modifierFlags": 917504
     },
-    "leftHalf" : {
-      "keyCode" : 123,
-      "modifierFlags" : 1572864
+    "leftHalf": {
+      "keyCode": 123,
+      "modifierFlags": 1572864
     },
-    "maximize" : {
-      "keyCode" : 3,
-      "modifierFlags" : 1572864
+    "maximize": {
+      "keyCode": 3,
+      "modifierFlags": 1572864
     },
-    "maximizeHeight" : {
-      "keyCode" : 126,
-      "modifierFlags" : 917504
+    "maximizeHeight": {
+      "keyCode": 126,
+      "modifierFlags": 917504
     },
-    "nextDisplay" : {
-      "keyCode" : 124,
-      "modifierFlags" : 1835008
+    "nextDisplay": {
+      "keyCode": 124,
+      "modifierFlags": 1835008
     },
-    "previousDisplay" : {
-      "keyCode" : 123,
-      "modifierFlags" : 1835008
+    "previousDisplay": {
+      "keyCode": 123,
+      "modifierFlags": 1835008
     },
-    "reflowTodo" : {
-      "keyCode" : 45,
-      "modifierFlags" : 786432
+    "reflowTodo": {
+      "keyCode": 45,
+      "modifierFlags": 786432
     },
-    "restore" : {
-      "keyCode" : 51,
-      "modifierFlags" : 786432
+    "restore": {
+      "keyCode": 51,
+      "modifierFlags": 786432
     },
-    "rightHalf" : {
-      "keyCode" : 124,
-      "modifierFlags" : 1572864
+    "rightHalf": {
+      "keyCode": 124,
+      "modifierFlags": 1572864
     },
-    "smaller" : {
-      "keyCode" : 123,
-      "modifierFlags" : 917504
+    "smaller": {
+      "keyCode": 123,
+      "modifierFlags": 917504
     },
-    "toggleTodo" : {
-      "keyCode" : 11,
-      "modifierFlags" : 786432
+    "toggleTodo": {
+      "keyCode": 11,
+      "modifierFlags": 786432
     },
-    "topHalf" : {
-      "keyCode" : 126,
-      "modifierFlags" : 1572864
+    "topHalf": {
+      "keyCode": 126,
+      "modifierFlags": 1572864
     },
-    "topLeft" : {
-      "keyCode" : 123,
-      "modifierFlags" : 1310720
+    "topLeft": {
+      "keyCode": 123,
+      "modifierFlags": 1310720
     },
-    "topRight" : {
-      "keyCode" : 124,
-      "modifierFlags" : 1310720
+    "topRight": {
+      "keyCode": 124,
+      "modifierFlags": 1310720
     }
   },
-  "version" : "93"
+  "version": "93"
 }
