`tmux`: remove pane marking

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -147,6 +147,9 @@ bind o display-message "Removed this binding. Use C-o or M-o for pane navigation
 set -g prompt-cursor-colour '#af8700'
 set -g prompt-cursor-style default
 
+# Unbind pane marking
+unbind m
+
 ################################################################################
 # Plugins ######################################################################
 ################################################################################
