--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -47,6 +47,7 @@
     ### Files that are OS-independent
     ~/.emacs: emacs
     ~/.gitconfig: gitconfig
+    ~/.gitignore-global: gitignore-global
     ~/.hushlogin: hushlogin
     ~/.lesskey: lesskey
     ~/.npmrc: npmrc
