--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -56,6 +56,7 @@
     ~/.config/tmux-powerline: tmux/tmux-powerline
     ~/.zprofile: zsh/zprofile
     ~/.zshrc: zsh/zshrc
+    ~/.p10k.zsh: zsh/p10k.zsh
 
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
