--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,13 @@
 #   where {files} is the regex of files to process, & {exclude} is the regex of
 #   files to exclude.
 
+# Exclude `graphite/user_config` from all pre-commit hooks. This file,
+# annoyingly, gets re-formatted every time we use graphite, so it consistently
+# breaks the end-of-file-fixer hook. It also contains a secret authToken &
+# should not be committed as-is, which is why we are committing it via
+# git-crypt; see: https://github.com/izzygomez/dotfiles/pull/58/
+exclude: "^graphite/user_config$"
+
 repos:
   # Pre-commit's built-in collection
   - repo: https://github.com/pre-commit/pre-commit-hooks
