--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,12 +12,10 @@
 #   where {files} is the regex of files to process, & {exclude} is the regex of
 #   files to exclude.
 
-# Exclude `graphite/user_config` from all pre-commit hooks. This file,
-# annoyingly, gets re-formatted every time we use graphite, so it consistently
-# breaks the end-of-file-fixer hook. It also contains a secret authToken &
-# should not be committed as-is, which is why we are committing it via
-# git-crypt; see: https://github.com/izzygomez/dotfiles/pull/58/
-exclude: "^graphite/user_config$"
+# Exclude `graphite/*` files from all pre-commit hooks. These files,
+# annoyingly, get re-formatted every time we use graphite, so they consistently
+# break certain hooks, e.g. end-of-file-fixer.
+exclude: "^graphite/*$"
 
 repos:
   # Pre-commit's built-in collection
