--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,26 +42,26 @@ repos:
 
   # Shell script formatting
   # Per note above, run this to see what files will be formatted:
-  # git ls-files | grep -E '\.(sh|bash)$|^(zsh/.*|install)$' | grep -v -E '^(dotbot|copilot\.el)/|zsh/README\.md$'
+  # git ls-files | grep -E '\.(sh|bash)$|^(zsh/.*)$' | grep -v -E '^(dotbot|copilot\.el)/|zsh/README\.md$'
   - repo: https://github.com/scop/pre-commit-shfmt
     rev: v3.12.0-2
     hooks:
       - id: shfmt
         args: [-w, -s, -i, "4"] # Write changes, simplify code, 4-space indent
         types: [text]
-        files: '\.(sh|bash)$|^(zsh/.*|install)$'
+        files: '\.(sh|bash)$|^(zsh/.*)$'
         exclude: '^(dotbot|copilot\.el)/|zsh/README\.md$'
 
   # Shell script linting
   # Per note above, run this to see what files will be formatted:
-  # git ls-files | grep -E '\.(sh|bash)$|^install$' | grep -v -E '^(dotbot|copilot\.el|zsh)/'
+  # git ls-files | grep -E '\.(sh|bash)$' | grep -v -E '^(dotbot|copilot\.el|zsh)/'
   - repo: https://github.com/shellcheck-py/shellcheck-py
     rev: v0.11.0.1
     hooks:
       - id: shellcheck
         types: [text]
         # Note: excluding zsh/ files because ShellCheck doesn't support zsh
-        files: '\.(sh|bash)$|^install$'
+        files: '\.(sh|bash)$'
         exclude: '^(dotbot|copilot\.el|zsh)/'
 
   # Prettier
