add claude `keybindings.json`
this is the default file that was generated by running `/keybindings`

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -45,6 +45,10 @@
       path: macOS-keyboard-shortcuts/DefaultKeyBinding.dict
 
     ### Files that are OS-independent
+    ~/.claude/keybindings.json:
+      # don't force-create dir if it doesn't exist
+      force: true
+      path: claude/keybindings.json
     ~/.config/graphite/user_config:
       create: true
       force: true
