add a `git-crypt`-encrypted `zshrc_stripe`
updated refs throughout repo. also adding checks to log error message if `git-crypt unlock` has not been run.

--- a/.gitattributes
+++ b/.gitattributes
@@ -12,3 +12,4 @@ gitignore-global linguist-language=Ignore-List
 
 # Encrypt files containing secrets via git-crypt
 graphite/user_config filter=git-crypt diff=git-crypt
+zsh/fragments/zshrc_stripe filter=git-crypt diff=git-crypt
